Actualizacion de la version en ingles y correccion de errores.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@303423 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/include.xml
+++ b/language/control-structures/include.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 383ede429794c92215b63044455c64a384994783 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="function.include" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><function>include</function></title>
@@ -12,26 +12,32 @@
   La siguiente documentación también se aplica a <function>require</function>.
  </simpara>
  <simpara>
-  Los archivos son incluidos con base en la ruta de acceso dada o el <link linkend="ini.include-path">include_path</link>
-  especificado, si no se da ninguna ruta. El
+  Los archivos son incluidos con base en la ruta de acceso dada o, si ninguna es dada, el
+  <link linkend="ini.include-path">include_path</link> especificado. Si el archivo
+  no se encuentra en el <link linkend="ini.include-path">include_path</link>,
+  <function>include</function> finalmente verificará en el propio directorio del script
+  que hace el llamado y en el directorio de trabajo actual, antes de fallar. El
   constructor <function>include</function> emitirá una
-  <link linkend="errorfunc.constants.errorlevels.e-warning">advertencia</link> si no 
-  puede encontrar un archivo; éste es un comportamiento diferente al de <function>require</function>,
-  el cual emitirá un
-  <link linkend="errorfunc.constants.errorlevels.e-error">error fatal</link>.
+  <link linkend="errorfunc.constants.errorlevels.e-warning">advertencia</link> si
+  no puede encontrar un archivo, éste es un comportamiento diferente al de
+  <function>require</function>, el cual emitirá un
+  <link linkend="errorfunc.constants.errorlevels.e-error">error fatal.</link>.
  </simpara>
  <simpara>
-  Si se define una ruta de acceso (completa o relativa), el
-  <link linkend="ini.include-path">include_path</link> será ignorado por completo.
-  Por ejemplo, si un nombre de archivo comienza con <literal>../</literal>, el intérprete
-  mirará en el directorio padre para encontrar el archivo solicitado.
+  Si una ruta es definida &mdash; ya sea absoluta (comenzando con una letra de unidad
+  en Windows o <literal>/</literal> en sistemas Unix/Linux) o relativa al
+  directorio actual (comenzando con <literal>.</literal> o
+  <literal>..</literal>) &mdash; el
+  <link linkend="ini.include-path">include_path</link> será ignorado
+  por completo. Por ejemplo, si un nombre de archivo comienza con <literal>../</literal>,
+  el interprete buscará en el directorio padre para encontrar el archivo solicitado.
  </simpara>
  <simpara>
   Para más información sobe como PHP maneja la inclusión de archivos y la ruta de accesos para incluir,
   ver la documentación de <link linkend="ini.include-path">include_path</link>.
  </simpara>
  <simpara>
-  Cuando se incluye un archivo, el código que contiene hereda el 
+  Cuando se incluye un archivo, el código que contiene hereda el
   <link linkend="language.variables.scope">ámbito de las variables</link> de la
   línea en la cual ocurre la inclusión. Cualquier variable disponible en esa línea
   del archivo que hace el llamado, estará disponible en el archivo llamado, desde ese
@@ -73,7 +79,7 @@ echo "Una $fruta $color"; // Una manzana verde
   el ámbito de las variables de esa función.
   Una excepción a esta regla son las <link
   linkend="language.constants.predefined">constantes mágicas</link> las cuales son
-  evaluadas por el intérprete antes que ocurra la inclusión. 
+  evaluadas por el intérprete antes que ocurra la inclusión.
  </simpara>
  <para>
   <example>
@@ -105,7 +111,7 @@ echo "Una $fruta $color";   // Una verde
   </example>
  </para>
  <simpara>
-  Cuando un archivo es incluido, el intérprete abandona el modo PHP e 
+  Cuando un archivo es incluido, el intérprete abandona el modo PHP e
   ingresa al modo HTML al comienzo del archivo objetivo y se reanuda
   de nuevo al final. Por esta razón, cualquier código al interior del archivo
   objetivo que deba ser ejecutado como código PHP, tendrá que ser encerrado dentro de
@@ -118,10 +124,10 @@ echo "Una $fruta $color";   // Una verde
   se puede especificar el archivo a ser incluido usando una URL (vía HTTP u
   otra envoltura soportada - ver <xref linkend="wrappers"/>para una lista
   de protocolos) en lugar de una ruta de acceso local. Si el servidor objetivo interpreta
-  el archivo objetivo como código PHP, las variables se pueden pasar al archivo 
+  el archivo objetivo como código PHP, las variables se pueden pasar al archivo
   incluido usando una string de petición como la usada con HTTP GET. Esto
   no es estrictamente hablando lo mismo que haber incluido el archivo y que
-  haya heredado el ámbito de variables del archivo padre; el script realmente 
+  haya heredado el ámbito de variables del archivo padre; el script realmente
   está siendo ejecutado en el servidor remoto y el resultado entonces se
   incluye dentro del script local.
  </simpara>
@@ -166,7 +172,7 @@ include 'file.php';  // Funciona.
    servidor local. Si el archivo desde el servidor remoto debe ser procesado
    allá y entregar la salida solamente, <function>readfile</function> es la mejor
    función para usar. De lo contrario, debe tenerse especial cuidado para asegurar que
-   el script remoto produce un código válido y deseado. 
+   el script remoto produce un código válido y deseado.
   </para>
  </warning>
  <para>
@@ -183,7 +189,7 @@ include 'file.php';  // Funciona.
   archivos remotos, a menos que la salida del archivo remoto tenga unas
   <link linkend="language.basic-syntax.phpmode">etiquetas válidas de
   inicio y terminación de PHP</link> (igual que con cualquier archivo local). Se pueden declarar la variables
-  necesarias dentro de esas etiquetas y serán introducidas en el punto del archivo 
+  necesarias dentro de esas etiquetas y serán introducidas en el punto del archivo
   en el cual fue incluido.
  </simpara>
  <para>
@@ -251,7 +257,7 @@ echo $bar; // muestra 1
   fue exitoso. Nótese la diferencia entre los ejemplos anteriores. El primero usa
   <function>return</function> dentro del archivo incluido, mientras que el otro no.
   Si el archivo no se pueden incluir, se retorna &false; y
-  se emite un <constant>E_WARNING</constant>. 
+  se emite un <constant>E_WARNING</constant>.
  </simpara>
  <para>
   Si hay funciones definidas en el archivo incluido, se pueden utilizar en el
