--- a/language/oop5/late-static-bindings.xml
+++ b/language/oop5/late-static-bindings.xml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 303578 Maintainer: chuso Status: ready -->
  <sect1 xml:id="language.oop5.late-static-bindings" xmlns="http://docbook.org/ns/docbook">
   <title>Enlace estático en tiempo de ejecución</title>
   <para>
-   Desde PHP 5.3.0, PHP incorpora una nueva funcionalidad llamada enlace estático
-   en tiempo de ejecución que permite hacer referencias a la clase en uso dentro
-   de un contexto de herencia estática.
+   Desde PHP 5.3.0, PHP incorpora una nueva funcionalidad llamada enlace estático en tiempo de
+   ejecución que permite hacer referencias a la clase en uso dentro de un contexto de herencia estática.
+  </para>
+  
+  <para>
+   De forma más precisa, un enlace estático en tiempo de ejecución para funcionar almacena
+   el nombre de clase de la última llamada que no tenga "propagación". En el caso de las llamadas a métodos
+   estáticos, se trata de la clase a la que se llamó explícitamente (normalmente, la que precede al
+   operador <link linkend="language.oop5.paamayim-nekudotayim"><literal>::</literal></link>);
+   en los casos de llamadas a métodos que no son estáticos, se resolvería a la clase del objeto. Una
+   "llamada con propagación" es una llamada estática que está precedida por <literal>self::</literal>,
+   <literal>parent::</literal>, <literal>static::</literal>, o, si seguimos la jerarquía de clases,
+   <function>forward_static_call</function>.
+   <!-- technically, static:: may be non forwarding, but it's irrelevant -->
+   
+   La función <function>get_called_class</function> puede utilizarse para obtener
+   un string con el nombre de la clase que realiza la llamada, y <literal>static::</literal>
+   introduces its scope.
   </para>
 
   <para>
-   Se le ha llamado "enlace estático en tiempo de ejecución" teniendo en cuenta
-   un punto de vista interno. "Enlace en tiempo de ejecución" viene del hecho de que
-   <literal>static::</literal> ya no resolverá a la clase en la que se definió el
-   método, sino que en su lugar se resolverá utilizando información en tiempo
-   de ejecución
+   Se le ha llamado "enlace estático en tiempo de ejecución" teniendo en cuenta un punto
+   de vista interno. "Enlace en tiempo de ejecución" viene del hecho de que <literal>static::
+   </literal> ya resuelve a la clase en la que se definió el método, sino que en su lugar se
+   resolverá utilizando información en tiempo de ejecución
    
    Debido a que se puede utilizar (entre otras cosas) para las llamadas
    de métodos estáticos, se le llamó también "enlace estático".
@@ -23,10 +37,9 @@
   <sect2 xml:id="language.oop5.late-static-bindings.self">
    <title>Limitaciones de <literal>self::</literal></title>
    <para>
-    Las referencias estáticas que hay dentro de la clase en uso,
-    como <literal>self::</literal> o <literal>__CLASS__</literal>,
-    se resuelven empleando el nombre de la clase a la que pertenece la
-    función:
+    Las referencias estáticas que hay dentro de la clase en uso, como
+    <literal>self::</literal> o <literal>__CLASS__</literal>, se resuelven
+    empleando el nombre de la clase a la que pertenece la función:
    </para>
    <example>
     <title>Uso de <literal>self::</literal></title>
@@ -71,8 +84,7 @@ A
     la llamada en tiempo de ejecución. Es decir, una palabra clave que en 
     el ejemplo anterior permita hacer referencia desde <literal>test()</literal>
     a <literal>B</literal>. Se decidió no crear una nueva palabra clave, por
-    lo que en su lugar se ha utilizado la palabra reservada
-    <literal>static</literal>.
+    lo que en su lugar se ha utilizado la palabra reservada <literal>static</literal>.
    </para>
 
    <example>
@@ -108,10 +120,11 @@ B
    </example>
    <note>
     <para>
-     ¡<literal>static::</literal> no se comporta como <literal>$this</literal> en
-     los métodos estáticos! Mientras que <literal>$this-></literal> aplica
-     herencia, <literal>static::</literal> no lo hace. Más adelante se detalla
-     esta diferencia.
+     Tenga en cuenta que, en contextos no estáticos, la clase que realiza la llamada
+     será la misma que la clase del objeto. Dado que <literal>$this-></literal>
+     tratará de invocar métodos privados en su mismo ámbito, el uso de
+     <literal>static::</literal> puede provocar diferents resultados. Otra diferencia es
+     que <literal>static::</literal> sólo puede hacer referencia a propiedades estáticas.
     </para>
    </note>
    <example>
@@ -119,40 +132,43 @@ B
     <programlisting role="php">
 <![CDATA[
 <?php
-class TestChild extends TestParent {
-    public function __construct() {
-        static::who();
+class A {
+    private function foo() {
+        echo "exito!\n";
     }
-
     public function test() {
-        $o = new TestParent();
-    }
-
-    public static function who() {
-        echo __CLASS__."\n";
+        $this->foo();
+        static::foo();
     }
 }
 
-class TestParent {
-    public function __construct() {
-        static::who();
-    }
+class B extends A {
+   /* foo() se copiará en B, por lo tanto su ámbito seguirá siendo A
+    * y la llamada tendrá éxito */
+}
 
-    public static function who() {
-        echo __CLASS__."\n";
+class C extends A {
+    private function foo() {
+        /* se reemplaza el método original; el ámbito del nuevo es ahora C */
     }
 }
-$o = new TestChild;
-$o->test();
 
+$b = new B();
+$b->test();
+$c = new C();
+$c->test();   //falla
 ?>
 ]]>
     </programlisting>
     &example.outputs;
     <screen>
 <![CDATA[
-TestChild
-TestParent
+exito!
+exito!
+exito!
+
+
+Fatal error:  Call to private method C::foo() from context 'A' in /tmp/test.php on line 9
 ]]>
     </screen>
    </example>
@@ -160,9 +176,8 @@ TestParent
     <para>
      En una llamada que se resuelva como estática, la resolución de enlaces estáticos
      en tiempo de ejecución se dentendrá sin propagarse. Por otra parte, las
-     llamadas estáticas que utilicen palabras clave como
-     <literal>parent::</literal> o <literal>self::</literal> sí propagarán la
-     información.
+     llamadas estáticas que utilicen palabras clave como <literal>parent::</literal> o
+     <literal>self::</literal> sí propagarán la información.
     </para>
     <example>
      <title>Llamadas que propagan y que no propagan</title>
@@ -210,50 +225,6 @@ C
      </screen>
     </example>
    </note>
-  </sect2>
-  <sect2 xml:id="language.oop5.late-static-bindings.edge-cases">
-   <title>Casos extremos</title>
-   <para>
-    Existen numerosos métodos para lanzar la ejecución de un método en PHP,
-    como devoluciones de llamada o métodos mágicos. Dado que los enlaces
-    estáticos en tiempo de ejecución se resuelven utilizando información
-    disponible en tiempo de ejecución, puede provocar resultados inesperados.
-   </para>
-   <example>
-    <title>Enlaces estáticos en tiempo de ejecución dentro de métodos mágicos</title>
-    <programlisting role="php">
-<![CDATA[
-<?php
-class A {
-
-   protected static function who() {
-        echo __CLASS__."\n";
-   }
-
-   public function __get($var) {
-       return static::who();
-   }
-}
-
-class B extends A {
-
-   protected static function who() {
-        echo __CLASS__."\n";
-   }
-}
-
-$b = new B;
-$b->foo;
-?>
-]]>
-    </programlisting>
-    &example.outputs;
-    <screen>
-<![CDATA[
-B
-]]>
-    </screen>
-   </example>
   </sect2>
  </sect1>
 <!-- Keep this comment at the end of the file
