Enviando muchos ficheros de OOP5. Viendo si soluciono ya mi problema con los Revcheck
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@303635 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/magic.xml
+++ b/language/oop5/magic.xml
@@ -2,7 +2,7 @@
 <!-- $Revision$ -->
 <!-- EN-Revision: 03977edc1f92ef56b1141f05388cf400e3f09fcd Maintainer: chuso Status: ready -->
  <sect1 xml:id="language.oop5.magic" xmlns="http://docbook.org/ns/docbook">
-  <title>Métodos Magic Methods</title>
+  <title>Métodos Magicos</title>
   <para>
    Las siguientes funciones de clases en PHP son mágicas:
    <link linkend="language.oop5.decon.constructor"><literal>__construct</literal></link>,
