--- a/language/oop5/late-static-bindings.xml
+++ b/language/oop5/late-static-bindings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 303578 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 0c878e752fc5d604326641412f2244b2562990e1 Maintainer: chuso Status: ready -->
  <sect1 xml:id="language.oop5.late-static-bindings" xmlns="http://docbook.org/ns/docbook">
   <title>Enlace estático en tiempo de ejecución</title>
   <para>
