Actualizacion de la version en ingles
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@303686 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/include.xml
+++ b/language/control-structures/include.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 383ede429794c92215b63044455c64a384994783 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 0a3b308c70bc29fbb1cbb4a28d00195946407f89 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="function.include" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><function>include</function></title>
@@ -25,7 +25,7 @@
  </simpara>
  <simpara>
   Si una ruta es definida &mdash; ya sea absoluta (comenzando con una letra de unidad
-  en Windows o <literal>/</literal> en sistemas Unix/Linux) o relativa al
+  o <literal>\</literal> en Windows o <literal>/</literal> en sistemas Unix/Linux) o relativa al
   directorio actual (comenzando con <literal>.</literal> o
   <literal>..</literal>) &mdash; el
   <link linkend="ini.include-path">include_path</link> será ignorado
