--- a/language/references.xml
+++ b/language/references.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: seros Status: ready -->
+<!-- EN-Revision: 22434db00e7486f5cecb9550904bbddce944ddcb Maintainer: seros Status: ready -->
 <chapter xml:id="language.references" xmlns="http://docbook.org/ns/docbook">
  <title>Referencias Explicadas</title>
  
@@ -106,7 +106,8 @@ $foo =& find_var($bar);
     Desde PHP 5, <link linkend="language.oop5.basic.new">new</link>
     devuelve una referencia automáticamente, por lo que
     usar <literal>=&amp;</literal> en este contexto es obsoleto y
-    produce un mensaje <constant>E_STRICT</constant>.
+    produce un mensaje <constant>E_DEPRECATED</constant> en PHP 5.3 y
+    posteriores, y un mensaje <constant>E_STRICT</constant> en versiones anteriores.
    </para>
    <warning>
     <para>
