Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@304919 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/references.xml
+++ b/language/references.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 590845fd0e99d6d7e9d4b1111b3f1eebbb52dd5c Maintainer: seros Status: ready -->
+<!-- EN-Revision: 2d567b44c9fe64702bab9f8a1811c186dd4371c7 Maintainer: seros Status: ready -->
 <chapter xml:id="language.references" xmlns="http://docbook.org/ns/docbook">
  <title>Referencias Explicadas</title>
  
@@ -58,12 +58,6 @@ $a =& $b;
      </para>
     </note>
    </para>
-   <note>
-    <para>
-     Si se copian matrices con referencias, sus valores no son desreferenciados.
-     Esto también es válido para matrices pasadas por valor en funciones.
-    </para>
-   </note>
    <note>
     <para>
      Si se asigna, pasa, o devuelve una variable no definida por referencia, 
@@ -193,9 +187,10 @@ $arr[0]++; $arr[1]++; $arr[2]++;
    </para>
    <para>
     Observe, sin embargo, que las referencias dentro de arrays son potencialmente peligrosas.
-    Mientras que una asignación normal (no por referencia) con una referencia en el
-    lado derecho no convierte el lado izquierdo en una referencia, las referencias dentro
-    de arrays son conservadas en asignaciones normales. Ejemplo:
+    Realizar una asignación normal (no por referencia) con una referencia en el
+    lado derecho no convierte el lado izquierdo en una referencia, pero las referencias
+    dentro de arrays son conservadas en estas asignaciones normales. Esto también se aplica
+    a las llamadas a funciones donde el array es pasado por valor. Ejemplo:
     <informalexample>
      <programlisting role="php">
 <![CDATA[
@@ -207,8 +202,8 @@ $c = $b;
 $c = 7; //$c no es una referencia; no cambia $a o $b
 
 /* Asignación de variables de array */
-$a = 1;
-$arr = array(&$a);
+$arr = array(1);
+$a =& $arr[0]; // $a y $arr[0] son el mismo conjunto de referencias
 $arr2 = $arr; // ¡no es una asignación por referencia!
 $arr2[0]++;
 /* $a == 2, $arr == array(2) */
