Actualizacion de la version en ingles
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@304940 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 41c30ef6187db9a5a960a4ec77e6a3bdf3da2655 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 22434db00e7486f5cecb9550904bbddce944ddcb Maintainer: jpberdejo Status: ready -->
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>Operadores</title>
   <simpara>
@@ -365,17 +365,75 @@ $b .= "ahí!"; // establece $b en "Hola ahí!", al igual que $b = $b . "ahí!";
     Tener en cuenta que la asignación copia la variable original en la nueva
     (asignación por valor), por lo que los cambios en una no afectarán a la
     otra. Esto también puede tener relevancia si se necesita copiar algo
-    como un gran array dentro de un bucle estrecho. La asignación
-    por referencia también está soportada, usando la sintaxis <computeroutput>$var =
-    &amp;$othervar;</computeroutput>.
-    'Asignación por referencia' significa que ambas variables terminan
-    apuntando a los mismos datos y nada es realmente copiado en alguna parte.
-    Para aprender más acerca de las referencias, por favor lea <link
-    linkend="language.references">referencias explicadas</link>. A partir de
-    PHP 5, los objetos son asignados por referencia a menos que explícitamente se diga
-    de otra manera con la nueva palabra clave <link linkend="language.oop5.cloning">
-    clone</link>.
+    como un gran array dentro de un bucle estrecho.
+   </para>  
+   <para>
+    Una excepción al comportamiento usual de la asignación por valor en PHP ocurre
+    con <type>object</type>s los cuales son asignados por referencia en PHP 5.
+    Los objetos pueden ser explícitamente copiados por medio de la palabra clave
+    <link linkend="language.oop5.cloning">clone</link>.
    </para>
+
+   <sect2 xml:id="language.operators.assignment.reference">
+    <title>Asignación por referencia</title>
+    <para>
+     La asignación por referencia también está soportada, utilizando la
+     sintaxis "<computeroutput>$var = &amp;$othervar;</computeroutput>".
+     Asignación por referencia significa que ambas variables terminan apuntando a los
+     mismos datos y nada es copiado en ninguna parte.  
+    </para>
+    <para>
+     <example>
+      <title>Asignación por referencia</title>
+      <programlisting role="php">
+<![CDATA[
+<?php
+$a = 3;
+$b = &$a; // $b es una referencia para $a
+
+print "$a\n"; // muestra 3
+print "$b\n"; // muestra 3
+
+$a = 4; // cambia $a
+
+print "$a\n"; // muestra 4
+print "$b\n"; // muestra 4 también, dado que $b es una referencia para $a, la cual ha
+              // sido cambiada
+?>
+]]>
+      </programlisting>
+     </example>
+    </para>
+    <para>
+     Desde PHP 5, el operador <link linkend="language.oop5.basic.new">new</link>
+     retorna una referencia automáticamente, así que asignar el resultado de
+     <link linkend="language.oop5.basic.new">new</link> por referencia, resulta
+     en un mensaje <constant>E_DEPRECATED</constant> en PHP 5.3 y posteriores y
+     un mensaje <constant>E_STRICT</constant> en versiones anteriores.
+    </para>
+    <para>
+     Por ejemplo, éste código resultará en una advertencia:
+     <informalexample>
+      <programlisting role="php">
+<![CDATA[
+<?php
+class C {}
+
+/* La siguiente línea genera el siguiente mensaje de error:
+ * Deprecated: Assigning the return value of new by reference is deprecated in...
+ */
+$o = &new C;
+?>
+]]>
+      </programlisting>
+     </informalexample>
+    </para>
+    <para>
+     Más información sobre referencias y sus usos potenciales se puede encontrar en
+     la sección del manual
+     <link linkend="language.references">Referencias Explicadas</link>
+    </para>
+   </sect2>
   </sect1>
 
   <sect1 xml:id="language.operators.bitwise">
@@ -1576,7 +1634,7 @@ AC
     </tgroup>
    </table>
    <simpara>
-    La razón para tener las dos variaciones diferentes de los operadores 
+    La razón para tener las dos variaciones diferentes de los operadores
     "and" y "or" es que ellos operan con precedencias diferentes. (Ver
     <link linkend="language.operators.precedence">Precedencia
     de operadores</link>.)
@@ -1640,11 +1698,11 @@ bool(true)
    <simpara>
     Existen dos operadores para datos tipo <type>string</type>. El primero es el
     operador de concatenación ('.'), el cual retorna el resultado de concatenar sus
-    argumentos derecho e izquierdo. El segundo es el operador de asignación sobre 
+    argumentos derecho e izquierdo. El segundo es el operador de asignación sobre
     concatenación ('<literal>.=</literal>'), el cual añade el argumento del lado derecho al
     argumento en el lado izquierdo. Por favor consulte <link
-    linkend="language.operators.assignment">Operadores de 
-    asignación</link> para más información. 
+    linkend="language.operators.assignment">Operadores de
+    asignación</link> para más información.
    </simpara>
 
    <para>
@@ -1717,9 +1775,9 @@ $a .= "World!";     // ahora $a contiene "Hello World!"
     </tgroup>
    </table>
    <para>
-    El operador <literal>+</literal> 
+    El operador <literal>+</literal>
     añade elementos de las claves restantes del array del lado derecho al
-    del lado izquierdo, mientras que las claves duplicadas NO son sobrescritas. 
+    del lado izquierdo, mientras que las claves duplicadas NO son sobrescritas.
    </para>
    <para>
     <informalexample>
@@ -1740,7 +1798,7 @@ var_dump($c);
 ]]>
      </programlisting>
     </informalexample>
-    Cuando sea ejecutado, este script producirá la siguiente salida: 
+    Cuando sea ejecutado, este script producirá la siguiente salida:
     <screen role="php">
 <![CDATA[
 Union of $a and $b:
@@ -1766,7 +1824,7 @@ array(3) {
    </para>
    <para>
     Los elementos de los arrays son iguales para la comparación si éstos tienen la
-    misma clave y valor. 
+    misma clave y valor.
    </para>
    <para>
     <example>
@@ -1785,7 +1843,7 @@ var_dump($a === $b); // bool(false)
     </example>
    </para>
    <para>
-    Ver también las secciones del manual sobre el 
+    Ver también las secciones del manual sobre el
     <link linkend="language.types.array">tipo array</link> y
     <link linkend="ref.array">funciones de arrays</link>.
    </para>
@@ -1858,7 +1916,7 @@ bool(true)
    </para>
    <para>
     Para comprobar si un objeto <emphasis>no</emphasis> es una instancia de una clase, se
-    puede usar el <link linkend="language.operators.logical">operador lógico 
+    puede usar el <link linkend="language.operators.logical">operador lógico
     <literal>not</literal></link>.
     <example>
      <title>Utilizando <literal>instanceof</literal> para verificar si un objeto <emphasis>no</emphasis> es una
