Actualizacion de la version en ingles
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@304941 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/declare.xml
+++ b/language/control-structures/declare.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 3e57d6ccfdd9e474227c60e0773a3c7d1ecb9536 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: b4690ffd75230b87cc8a40497fbf561434b95c37 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.declare" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>declare</literal></title>
@@ -178,12 +178,15 @@ declare(encoding='ISO-8859-1');
   <para>
    El valor declarado de encoding es ignorado en PHP 5.3 a menos que php esté compilado con
    <literal>--enable-zend-multibyte</literal>.
+  <para>
+   Tener en cuenta que PHP no expone si <literal>--enable-zend-multibyte</literal> fue
+   utilizado para compilar PHP que no sea por <function>phpinfo</function>.
+  </para>
    <!-- FIXME PHP_6
    In PHP 6.0, the <literal>encoding</literal>
    directive will be used to inform the scanner what encoding the file is created in.  Legal
    values are encoding names such as <literal>UTF-8</literal>.
    -->
-  </para>
  </sect2>
 </sect1>
 
