--- a/language/oop5/overloading.xml
+++ b/language/oop5/overloading.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c84d13055e3302970eccfd4a48c02d51d7110f5d Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 606c44a528e1649ff4dcb5706a5e85935d9c36f6 Maintainer: chuso Status: ready -->
  <sect1 xml:id="language.oop5.overloading" xmlns="http://docbook.org/ns/docbook">
   <title>Sobrecarga</title>
 
@@ -139,6 +139,20 @@
      Del mismo modo, nunca se llama a <function>__get</function> al 
      encadenar asignaciones como ésta:
      <literal><![CDATA[ $a = $obj->b = 8; ]]></literal>
+    </para>
+   </note>
+   
+   <note>
+    <para>
+     No se puede utilizar una propiedad sobrecargada en ninguna
+     construcción del lenguaje que no sea <function>isset</function>. Esto
+     significa que si se invoca a <function>empty</function> en una propiedad
+     sobrecargada, no se llamará al método de sobrecarga.
+    </para>
+    <para>
+     Para solventar esta limitación, se debe copiar la propiedad sobrecargada
+     en una variable de ámbito local que <function>empty</function> pueda
+     manejar.
     </para>
    </note>
 
