--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 22434db00e7486f5cecb9550904bbddce944ddcb Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: deda9f1f013b490691870f3f1a085b1961f3413c Maintainer: jpberdejo Status: ready -->
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>Operadores</title>
   <simpara>
@@ -298,12 +298,25 @@ $a = $b += 3; // $a = ($b += 3) -> $a = 5, $b = 5
     Los operandos del módulo se convierten en integers (por extracción de la parte
     decimal) antes del procesamiento.
    </simpara>
-   <note>
-    <simpara>
-     El resto de <literal>$a % $b</literal> es negativo para <literal>$a</literal>
-     negativo.
-    </simpara>
-   </note>
+   <para>
+    El resultado del operador módulo <literal>%</literal> tiene el mismo signo
+    que el dividendo &mdash; es decir, el resultado de <literal>$a % $b</literal>
+    tendrá el mismo signo que <varname>$a</varname>. Por ejemplo:
+    <informalexample>
+     <programlisting role="php">
+<![CDATA[
+<?php
+
+echo (5 % 3)."\n";           // muestra 2
+echo (5 % -3)."\n";          // muestra 2
+echo (-5 % 3)."\n";          // muestra -2
+echo (-5 % -3)."\n";         // muestra -2
+
+?>
+]]>
+     </programlisting>
+    </informalexample>
+   </para>
    <simpara>
     Véase también la página del manual sobre
     <link linkend="ref.math">funciones matemáticas</link>.
