Actualizo dos ficheros (envolturas y enlace estatico tardio), y continuo con la traduccion de HTTP, en este caso, HttpResponse
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@305304 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/late-static-bindings.xml
+++ b/language/oop5/late-static-bindings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 0c878e752fc5d604326641412f2244b2562990e1 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: bae6b5c7e070e7969cd99e5d72f9110878a4a538 Maintainer: chuso Status: ready -->
  <sect1 xml:id="language.oop5.late-static-bindings" xmlns="http://docbook.org/ns/docbook">
   <title>Enlace estático en tiempo de ejecución</title>
   <para>
@@ -120,8 +120,8 @@ B
    </example>
    <note>
     <para>
-     Tenga en cuenta que, en contextos no estáticos, la clase que realiza la llamada
-     será la misma que la clase del objeto. Dado que <literal>$this-></literal>
+     En contextos no estáticos, la clase que realiza la llamada
+     será la clase del objeto instanciado. Dado que <literal>$this-></literal>
      tratará de invocar métodos privados en su mismo ámbito, el uso de
      <literal>static::</literal> puede provocar diferents resultados. Otra diferencia es
      que <literal>static::</literal> sólo puede hacer referencia a propiedades estáticas.
