--- a/language/predefined/exception/construct.xml
+++ b/language/predefined/exception/construct.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 2b587ab01f833234c6520e5f46e6a87919d23135 Maintainer: yago Status: ready -->
+<!-- EN-Revision: 739b47be953e2edd69e3bbadb306de5b36be1a6b Maintainer: yago Status: ready -->
 <refentry xml:id="exception.construct" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>Exception::__construct</refname>
@@ -76,6 +76,15 @@
   </para>
  </refsect1>
  
+ <refsect1 role="notes">
+  &reftitle.notes;
+  <note>
+   <para>
+    El <parameter>message</parameter> <emphasis>NO</emphasis> 
+    es seguro binariamente.
+   </para>
+  </note>
+ </refsect1> 
 </refentry>
  
 <!-- Keep this comment at the end of the file
