updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@305585 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/autoload.xml
+++ b/language/oop5/autoload.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 4ff73f7555fbca25d9668055a08f43edd507e8e1 Maintainer: x1v4nx Status: ready -->
-<!-- Reviewed: no -->
-
+<!-- EN-Revision: a2048ed42fe3df85010149ae85e9e01e574f274d Maintainer: x1v4nx Status: ready -->
  <sect1 xml:id="language.oop5.autoload" xmlns="http://docbook.org/ns/docbook">
   <title>Auto-carga de Clases</title>
   <para>
@@ -56,7 +54,7 @@
 <![CDATA[
 <?php
 function __autoload($class_name) {
-    require_once $class_name . '.php';
+    include $class_name . '.php';
 }
 
 $obj  = new MyClass1();
