Nueva normativa para las actualizaciones de ficheros.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@305600 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/basic.xml
+++ b/language/oop5/basic.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 8cd6280cc638bedb620c5642a3b70cbc55ef09dd Maintainer: x1v4nx Status: ready -->
+<!-- EN-Revision: 6e133c0d53cf2cbfb92f64422021ebb5b76d3e5e Maintainer: jpberdejo Status: ready -->
 <!-- Reviewed: no -->
 
  <sect1 xml:id="language.oop5.basic" xmlns="http://docbook.org/ns/docbook">
@@ -112,13 +112,18 @@ $this no está definida.
   <sect2 xml:id="language.oop5.basic.new">
    <title>new</title>
    <para>
-    Para crear una instancia de una clase, un nuevo objeto debe ser creado
-    y asignado a una variable. Un objeto siempre será asignado cuando
-    se cree un nuevo objeto a menos que el objeto tenga definido un
+    Para crear una instancia de una clase, la palabra clave <literal>new</literal> debe
+    ser usada. Un objeto siempre se creará a menos que el objeto tenga un
     <link linkend="language.oop5.decon">constructor</link> que arroje una
     <link linkend="language.exceptions">excepción</link> en caso de error.
     Las clases deberían ser definidas antes de la instanciación (y en algunos casos
     esto es un requerimiento).
+   </para>
+   <para>
+    Si una <type>string</type> que contiene el nombre de una clase se usa con
+    <literal>new</literal>, una nueva instancia de esa clase será creada. Si
+    la clase está en un espacio de nombres, su nombre completamente cualificado se debe usar cuando
+    se hace esto.
    </para>
    <example>
     <title>Creación de una instancia</title>
@@ -175,6 +180,47 @@ object(SimpleClass)#1 (1) {
    ["var"]=>
      string(30) "$assigned tendrá este valor"
 }
+]]>
+    </screen>
+   </example>
+   <para>
+    PHP 5.3.0 introdujo un par de nuevas maneras para crear instancias de un
+    objeto:
+   </para>
+   <example>
+    <title>Creando nuevos objetos</title>
+    <programlisting role="php">
+<![CDATA[
+<?php
+class Test
+{
+    static public function getNew()
+    {
+        return new static;
+    }
+}
+
+class Child extends Test
+{}
+
+$obj1 = new Test();
+$obj2 = new $obj1;
+var_dump($obj1 !== $obj2);
+
+$obj3 = Test::getNew();
+var_dump($obj3 instanceof Test);
+
+$obj4 = Child::getNew();
+var_dump($obj4 instanceof Child);
+?>
+]]>
+    </programlisting>
+    &example.outputs;
+    <screen>
+<![CDATA[
+bool(true)
+bool(true)
+bool(true)
 ]]>
     </screen>
    </example>
