--- a/language/oop5/constants.xml
+++ b/language/oop5/constants.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: x1v4nx Status: ready -->
+<!-- EN-Revision: a46a05a003c38d403ec36e7068d16d63f00eb15c Maintainer: jpberdejo Status: ready -->
 <!-- Reviewed: no -->
 
  <sect1 xml:id="language.oop5.constants" xmlns="http://docbook.org/ns/docbook">
@@ -15,7 +15,7 @@
    propiedad, un resultado de una operación matemática, o una llamada a una función.
   </para>
   <para>
-   También es posible tener <literal>constantes</literal> para interfaces. Vea la
+   También es posible para las interfaces tener <literal>constantes</literal>. Ver la
    <link linkend="language.oop5.interfaces">documentación de interfaces</link> para
    ejemplos.
   </para>
