--- a/language/oop5/inheritance.xml
+++ b/language/oop5/inheritance.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: x1v4nx Status: ready -->
-<!-- Reviewed: no -->
-
+<!-- EN-Revision: dcac1cb0bfa8798304ee7b074e707315ec5a9818 Maintainer: jpberdejo Status: ready -->
  <sect1 xml:id="language.oop5.inheritance" xmlns="http://docbook.org/ns/docbook">
   <title>Herencia de Objetos</title>
   <para>
-   La herencia es un principio de programación bien establecido, y PHP hace uso
-   de este principioen su modelo de objetos. Este principio afectará la manera
-   en que muchas clases y objetos se relacionan con otro.
+   La herencia es un principio de programación bien establecido y PHP hace uso
+   de este principio en su modelado de objetos. Este principio afectará la manera
+   en que muchas clases y objetos se relacionan unas con otras.
   </para>
   <para>
    Por ejemplo, cuando se extiende una clase, la subclase hereda todos los
-   métodos public y protected de la clase parent. A menos que una clase
-   sobrescriba dichos métodos, éstos conservarán la funcionalidad original.
+   métodos públicos y protegidos de la clase padre. A menos que una clase sobrescriba
+   esos métodos, mantendrán su funcionalidad original.
   </para>
   <para>
-   Esto es útil para funcionalidades de definición y abstracción, y permite
-   la implementación de funcionalidades adicionales en objetos similares
-   sin la necesidad de reimplementar todas las funcionalidades en común.
+   Esto es útil para la definición y abstracción de la funcionalidad y permite la
+   implementación de funcionalidad adicional en objetos similares sin la
+   necesidad de reimplementar toda la funcionalidad compartida.
   </para>
+
+  <note>
+   <para>
+    A menos que la carga automática sea utilizada, entonces las clases deben ser definidas antes de ser
+    usadas. Si una clase se extiende a otra, entonces la clase padre debe ser declarada
+    antes de la estructura de clase hija. Esta regla se aplica a las clases que heredan
+    de otras clases e interfaces.
+   </para>
+  </note>
+
   <sect2 xml:id="language.oop5.inheritance.examples">
    <example xml:id="language.oop5.inheritance.examples.ex1">
-    <title>Ejemplo de Herencia</title>
+    <title>Ejemplo de herencia</title>
      <programlisting role="php">
 <![CDATA[
 <?php
@@ -36,7 +44,7 @@ class foo
     
     public function printPHP()
     {
-        echo 'PHP es grandioso.' . PHP_EOL;
+        echo 'PHP is great.' . PHP_EOL;
     }
 }
 
@@ -51,15 +59,16 @@ class bar extends foo
 $foo = new foo();
 $bar = new bar();
 $foo->printItem('baz'); // Salida: 'Foo: baz'
-$foo->printPHP();       // Salida: 'PHP es grandioso.'
+$foo->printPHP();       // Salida: 'PHP is great' 
 $bar->printItem('baz'); // Salida: 'Bar: baz'
-$bar->printPHP();       // Salida: 'PHP es grandioso.'
+$bar->printPHP();       // Salida: 'PHP is great'
 
 ?>
 ]]>
     </programlisting>
    </example>
   </sect2>
+
  </sect1>
  
 <!-- Keep this comment at the end of the file
@@ -82,3 +91,4 @@ vim600: syn=xml fen fdm=syntax fdl=2 si
 vim: et tw=78 syn=sgml
 vi: ts=1 sw=1
 -->
+
