Nueva normativa para las actualizaciones de ficheros.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@305602 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/predefined/variables/server.xml
+++ b/language/predefined/variables/server.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: d8789482790fc66e5716a0f4222d26f9cc4553d9 Maintainer: gerardocdc Status: ready -->
+<!-- EN-Revision: f07e214a3a07e0bc70daebb71d5fc331154bc3de Maintainer: jpberdejo Status: ready -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.server" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -444,9 +444,8 @@
      <term>'<varname>PHP_AUTH_USER</varname>'</term>
      <listitem>
       <simpara>
-       Esta variable tiene el valor del nombre del usuario proporcionado
-       por el usuario cuando en Apache o IIS (ISAPI en PHP 5) se ejecuta 
-       un módulo de autentificación HTTP.
+       Cuando se hace autenticación HTTP, está variable se establece para el
+       nombre de usuario provisto por el usuario.
       </simpara>
      </listitem>
     </varlistentry>
@@ -455,9 +454,8 @@
      <term>'<varname>PHP_AUTH_PW</varname>'</term>
      <listitem>
       <simpara>
-       Esta variable tiene el valor de la contraseña proporcionada
-       por el usuario cuando en Apache o IIS (ISAPI en PHP 5) se ejecuta 
-       un módulo de autentificación HTTP.
+       Cuando se hace autenticación HTTP, está variable se establece para la
+       clave provista por el usuario.
       </simpara>
      </listitem>
     </varlistentry>
@@ -466,8 +464,8 @@
      <term>'<varname>AUTH_TYPE</varname>'</term>
      <listitem>
       <simpara>
-       Esta variable tiene el valor del tipo de autentificación empleada cuando
-       en Apache se ejecuta un módulo de autentificación HTTP.
+       Cuando se hace autenticado HTTP, está variable se establece para el
+       tipo de autenticación.
       </simpara>
      </listitem>
     </varlistentry>
