Meto revcheck en instalacion de sun en windows (se me paso). Empiezo con DIO. Traduzco el articulo abandonado de migration5. Y finalmente actualizo arrayaccess
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@305632 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/predefined/arrayaccess/offsetset.xml
+++ b/language/predefined/arrayaccess/offsetset.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 11fa90448359d2c90ef8d0448abd9a128b4c087e Maintainer: gerardocdc Status: ready -->
+<!-- EN-Revision: 1c88e130dd787285869ed37b9fad6a8464a4795d Maintainer: chuso Status: ready -->
 
 <refentry xml:id="arrayaccess.offsetset" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
@@ -81,6 +81,21 @@ Array
     </informalexample>
    </para>
   </note>
+
+  <note>
+    <para>
+     Esta función no es invocada al realizar asignaciones por referencias
+     y por tanto en los cambios de dimensiones en arrays sobrecargados con
+      <classname>ArrayAccess</classname> (indirecto en el sentido de que 
+      no se hace cambiando la dimensión directamente, sino cambiando una
+      sub-dimensión o sub-propiedad o asignando la dimensión del array
+      por referencia en otra variable).
+      En su lugar, se llama a <function>ArrayAccess::offsetGet</function>. La
+      operación tendrá éxito si devuelve el valor por referencia,
+      lo cuál sólo es posible desde PHP 5.3.4.
+    </para>
+  </note>
+
  </refsect1>
  
  <!--
