--- a/language/predefined/arrayaccess/offsetget.xml
+++ b/language/predefined/arrayaccess/offsetget.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 723d92067d654092beb92b53005e973066f25ee5 Maintainer: jorgeolaya Status: ready -->
+<!-- EN-Revision: 305651 Maintainer: jorgeolaya Status: ready -->
 <refentry xml:id="arrayaccess.offsetget" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>ArrayAccess::offsetGet</refname>
