--- a/language/predefined/arrayaccess/offsetget.xml
+++ b/language/predefined/arrayaccess/offsetget.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 305651 Maintainer: jorgeolaya Status: ready -->
+<!-- EN-Revision: 441466d89c1af21ee3bc64cc58cbd0c3a12a0286 Maintainer: jorgeolaya Status: ready -->
 <refentry xml:id="arrayaccess.offsetget" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>ArrayAccess::offsetGet</refname>
