--- a/language/predefined/variables/server.xml
+++ b/language/predefined/variables/server.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: f07e214a3a07e0bc70daebb71d5fc331154bc3de Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 40a850f73df8e3c6c4f0d0aa4b9de62aa62fe445 Maintainer: yago Status: ready -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.server" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -19,7 +19,7 @@
    pueden omitir algunas o proporcionar otras que no se encuentran
    recogidas aquí. Un gran número de estas variables se encuentran
    recogidas en <link 
-   xlink:href="&url.cgispec;">especificación CGI 1.1</link>, así que al menos
+   xlink:href="&url.rfc;3875">especificación CGI 1.1</link>, así que al menos
    debe esperar encontrar estas entradas.
   </para>
   
