--- a/language/predefined/exception/getcode.xml
+++ b/language/predefined/exception/getcode.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288721 $ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- $Revision$ -->
+<!-- EN-Revision: 6fff44bf994df0afa2a6e34c915b578a7dc68a19 Maintainer: yago Status: ready -->
+
 <refentry xml:id="exception.getcode" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>Exception::getCode</refname>
@@ -10,7 +11,7 @@
  <refsect1 role="description">
   &reftitle.description;
   <methodsynopsis>
-   <modifier>final</modifier> <modifier>public</modifier> <type>int</type><methodname>Exception::getCode</methodname>
+   <modifier>final</modifier> <modifier>public</modifier> <type>mixed</type><methodname>Exception::getCode</methodname>
    <void />
   </methodsynopsis>
   <para>
@@ -26,7 +27,10 @@
  <refsect1 role="returnvalues">
   &reftitle.returnvalues;
   <para>
-   Devuelve el código de Excepción en forma de <type>integer</type>.
+   Devuelve el código de Excepción en forma de <type>integer</type> en
+   <classname>Exception</classname> pero posiblemente en forma de otros tipos en
+   <classname>Exception</classname> descendientes (por ejemplo como
+   <type>string</type> en <classname>PDOException</classname>).
   </para>
  </refsect1>
 
