--- a/language/types/string.xml
+++ b/language/types/string.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 9adf7eba600a7ab91653dc85b9e0b9fb25f1e37d Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 0337085f739ac7ac2208cb15d699cb21a3268db7 Maintainer: jpberdejo Status: ready -->
 <sect1 xml:id="language.types.string">
  <title>Cadenas</title>
  
@@ -548,7 +548,7 @@ $jugos = array("manzana", "naranja", "koolaid1" => "púrpura");
 
 echo "El tomó algo de jugo de $jugos[0].".PHP_EOL;
 echo "El tomó algo de jugo de $jugos[1].".PHP_EOL;
-echo "El tomó algo de jugo hecho de $jugo[0]s.".PHP_EOL;
+echo "El tomó algo de jugo hecho de $jugo[0]s.".PHP_EOL;// No funcionará
 echo "El tomó algo de jugo $jugos[koolaid1].".PHP_EOL;
 
 class people {
@@ -564,7 +564,7 @@ $people = new people();
 echo "$people->john tomó algo de jugo de $jugos[0].".PHP_EOL;
 echo "$people->john entonces dijo hola a $people->jane.".PHP_EOL;
 echo "La esposa de $people->john's saludó a $people->robert.".PHP_EOL;
-echo "$people->robert saludó a los dos $people->smiths.";
+echo "$people->robert saludó a los dos $people->smiths."; // No funcionará
 ?>
 ]]>
      </programlisting>
