updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@306580 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/string.xml
+++ b/language/types/string.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 0337085f739ac7ac2208cb15d699cb21a3268db7 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: b8045fcb12ab07ead1258ff211eaa2ffb9f52738 Maintainer: yago Status: ready -->
 <sect1 xml:id="language.types.string">
  <title>Cadenas</title>
  
@@ -246,7 +246,7 @@ echo 'Las variables $tampoco se $expandiran';
 class foo {
     public $bar = <<<EOT
 bar
-EOT;
+    EOT;
 }
 ?>
 ]]>
@@ -298,14 +298,14 @@ EOT;
 ?>
 ]]>
     </programlisting>
-   </example>
-   &example.outputs;
-   <screen>
+    &example.outputs;
+    <screen>
 <![CDATA[
 Mi nombre es "MiNombre". Estoy escribiendo un poco de Foo.
 Ahora, estoy escribiendo un poco de Bar2.
 Esto debe mostrar una 'A' mayúscula: A]]>
-   </screen>
+    </screen>
+   </example>
    
    <para>
     Tambien se puede emplear la sintaxis Heredoc para pasar datos como
@@ -442,13 +442,14 @@ EOT;
 ?>
 ]]>
     </programlisting>
-   </example>
-   &example.outputs;
-   <screen>
+    &example.outputs;
+    <screen>
 <![CDATA[
 Mi nombre es "$name". Estoy escribiendo un poco de $foo->foo.
 Ahora, estoy escribiendo un poco de {$foo->bar[1]}.
-Esto debe mostrar una 'A' mayúscula: \x41]]></screen>
+Esto debe mostrar una 'A' mayúscula: \x41]]>
+    </screen>
+   </example>
    
    <note>
     <para>
@@ -688,8 +689,8 @@ echo "{$foo->$baz[1]}\n";
      </programlisting>
      &example.outputs;
      <screen>
-      Soy bar.
-      Soy bar.
+Soy bar.
+Soy bar.
      </screen>
     </informalexample>
     
