--- a/language/oop5/iterations.xml
+++ b/language/oop5/iterations.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 3109183fdea39696558e7b89b26f885a72b3724b Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: ca6478c611c9a702eca7063d28c960b4cead5d49 Maintainer: jpberdejo Status: ready -->
  <sect1 xml:id="language.oop5.iterations" xmlns="http://docbook.org/ns/docbook">
   <title>Iteración de objetos</title>
   <para>
@@ -82,8 +82,7 @@ private => private var
 class MyIterator implements Iterator
 {
     private $var = array();
-    private $index = 0;
-
+    
     public function __construct($array)
     {
         if (is_array($array)) {
@@ -94,43 +93,35 @@ class MyIterator implements Iterator
     public function rewind()
     {
         echo "rewinding\n";
-        $this->index = 0;
+        reset($this->var);
     }
 
     public function current()
     {
-        $k = array_keys($this->var);
-        $var = $this->var[$k[$this->index]];
+        $var = current($this->var);
         echo "current: $var\n";
         return $var;
     }
 
     public function key()
     {
-        $k = array_keys($this->var);
-        $var = $k[$this->index];
+        $var = key($this->var);
         echo "key: $var\n";
         return $var;
     }
 
     public function next()
     {
-        $k = array_keys($this->var);
-        if (isset($k[++$this->index])) {
-            $var = $this->var[$k[$this->index]];
-            echo "next: $var\n";
-            return $var;
-        } else {
-            echo "next:\n";
-            return false;
-        }
+        $var = next($this->var);
+        echo "next: $var\n";
+        return $var;
     }
 
     public function valid()
     {
-        $k = array_keys($this->var);
-        $var = isset($k[$this->index]);
-        echo "valid: {$var}\n";
+        $key = key($this->var);
+        $var = ($key !== NULL && $key !== FALSE);
+        echo "valid: $var\n";
         return $var;
     }
 
@@ -163,7 +154,7 @@ valid: 1
 current: 3
 key: 2
 2: 3
-next: (no more)
+next:
 valid:
 ]]>
    </screen>
